week02 html activity iii

--- a/week02/holygrail.html
+++ b/week02/holygrail.html
@@ -13,8 +13,8 @@
         </header>
         <nav>
             <ul>
-                <li><a href="https://www.familysearch.org/tree/overview">FamilySearch Family Tree</a></li>
-                <li><a href="https://www.ancestry.com.au">Ancestry.org</a></li>
+                <li><a href="https://www.familysearch.org/tree/overview">FamilySearch</a></li>
+                <li><a href="https://www.ancestry.com.au">Ancestry</a></li>
             </ul>
         </nav>
         <main>
