--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
        <meta charset="utf-8">
        <meta name="viewport" content="width=device-width,initial-scale=1.0">
        <title>Charisse Hearns-Lemon | WDD 130</title>
+       <meta name="description" content="Charisse Hearns-Lemon WDD 130 Homepage">
+       <meta name="author" content="Charisse Hearns-Lemon">
        <link rel="stylesheet" href="styles/styles.css">
     </head>
     <body>
@@ -19,6 +21,11 @@
             <img src="images/profile.jpg" alt="Profile photo of Charisse Hearns-Lemon" width="200">
             <p>I am a mother of two lovely children, a sister to five siblings, and have two wonderful parents. I live in Auckland, New Zealand, and am excited to be taking this course.</p>
         </main>
+        <aside>
+            <h2>Auckland</h2>
+            <img src="images/auckland.jpg" alt="Auckland's scenic landscape.">
+            <p>"The Māori-language name for Auckland is Tāmaki Makaurau, meaning "Tāmaki desired by many", in reference to the desirability of its natural resources and geography." <i>- wiki</i></p>
+        </aside>
         <footer>
             <p>&#169;2024 &#9830; Charisse Hearns-Lemon &#9830; Auckland, New Zealand
             </p>
