--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -9,7 +9,7 @@
          name="description"
          content="Charisse Hearns-Lemon's White Water Rafting Plan for WDD 130.">
         <meta name="author" content="Charisse Hearns-Lemon">
-        <link rel="stylesheet" href="/styles/site-plan-rafting.css">
+        <link href="/styles/site-plan-rafting.css" rel="stylesheet" >
 </head>
 
 <header>
