--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -17,59 +17,62 @@
     <div>Charisse Hearns-Lemon</div>
 </header>
 
-<body>
-    <h2>Overview</h2>
+<main>
+    <body>
+        <h2>Overview</h2>
 
-    <h3>Purpose</h3>
-    <p>To bring in revenue by reaching new potential clients online and giving existing clients an easy avenue to book trips. The site will provide the client with all the information they need to confidently book a white water rafting experience.</p>
+        <h3>Purpose</h3>
+        <p>To bring in revenue by reaching new potential clients online and giving existing clients an easy avenue to book trips. The site will provide the client with all the information they need to confidently book a white water rafting experience.</p>
 
-    <h3>Audience</h3>
-    <p>The target customers are healthy and physically active adults and older youth: couples, corporate groups and school trips in particular. They may be new to the sport or be 'old-hands' at it. They want a holiday experience or team building activity that will physically challenge them. They will find information about white water rafting on the website, that will include the history of the sport, information about the river being rafted on, safety procedures, equipment, clothing required, details about the company and people involved, availability and booking information. Customers must be able to swim to book an adventure. Desktop, laptop and mobile device will all be utilised to access the site.</p>  
+        <h3>Audience</h3>
+        <p>The target customers are healthy and physically active adults and older youth: couples, corporate groups and school trips in particular. They may be new to the sport or be 'old-hands' at it. They want a holiday experience or team building activity that will physically challenge them. They will find information about white water rafting on the website, that will include the history of the sport, information about the river being rafted on, safety procedures, equipment, clothing required, details about the company and people involved, availability and booking information. Customers must be able to swim to book an adventure. Desktop, laptop and mobile device will all be utilised to access the site.</p>  
 
 
-    <h2>Branding</h2>
+        <h2>Branding</h2>
 
-    <h3>Website Logo</h3>
-    <img src="images/logo.png" alt="Rapids Site Logo">
+        <h3>Website Logo</h3>
+        <img src="images/logo.png" alt="Rapids Site Logo">
 
-    <h2>Style Guide</h2>
+        <h2>Style Guide</h2>
 
-    <h3>Color Palette</h3>
-   <p style="color: #090946;">primary-colour #090946
-    <br>
-      secondary-colour #fff
-    <br>
-      accent1-colour #05f2f2
-    <br>
-      accent2-colour #3b74ed
-    </p>
+        <h3>Color Palette</h3>
+        <p style="color: #090946;">primary-colour #090946
+        <br>
+        secondary-colour #fff
+        <br>
+        accent1-colour #05f2f2
+        <br>
+        accent2-colour #3b74ed
+        </p>
    
-    <p>Palette URL: <a href="https://coolors.co/3b74ed-05f2f2-ffffff-090946" target="blank">https://coolors.co/3b74ed-05f2f2-ffffff-090946</a></p>
+        <p>Palette URL: <a href="https://coolors.co/3b74ed-05f2f2-ffffff-090946" target="blank">https://coolors.co/3b74ed-05f2f2-ffffff-090946</a></p>
 
-    <h3>Typography</h3>
-    <p><a href="https://fonts.google.com/specimen/Prosto+One?classification=Display">Prosto One, display.</a></p>
-    <p><a href="https://fonts.google.com/specimen/Montserrat/tester?stroke=Sans+Serif">Montserrat, sans serif.</a></p>
+        <h3>Typography</h3>
+        <p><a href="https://fonts.google.com/specimen/Prosto+One?classification=Display">Prosto One, display.</a></p>
+        <p><a href="https://fonts.google.com/specimen/Montserrat/tester?stroke=Sans+Serif">Montserrat, sans serif.</a></p>
 
-    <h4>Headings Example Font</h4>
-    <h4>Normal Text/Paragraph Example Font</h4>
-    <p>Lorem ipsum dolor sit amet.q</p>
-    <h4>Colored Callout Example Font</h4>
-    <p>Lorem.</p>
+        <h4>Headings Example Font</h4>
+        <h4>Normal Text/Paragraph Example Font</h4>
+        <p>Lorem ipsum dolor sit amet.q</p>
+        <h4>Colored Callout Example Font</h4>
+        <p>Lorem.</p>
 
-    <h3>Navigation</h3>
-    <nav>
-        <a href="#">Home</a>
-        <a href="#">About Us</a>
-        <a href="#">Trips</a>
-        <a href="#">Contact Us</a>
-    </nav>
+        <h3>Navigation</h3>
+        <nav>
+            <a href="#">Home</a>
+            <a href="#">About Us</a>
+            <a href="#">Trips</a>
+            <a href="#">Contact Us</a>
+        </nav>
 
-    <h2>Wireframes</h2>
-    <h3>Home Page Wireframe</h3>
-    <img src="https://byui-cse-github.io/wdd130-ww-course/images/wwr/wwr-wireframe-home.png" alt="Home Page Wireframe Example Design" width="700">
-    <h3>About Us Page Wireframe</h3>
-    <img src="https://byui-cse.github.io/wdd130-ww-course/images/wwr/wwr-wireframe-aboutus-update.png" alt="About Us Page Wireframe Design" width="700">
-</body>
+        <h2>Wireframes</h2>
+        <h3>Home Page Wireframe</h3>
+        <img src="https://byui-cse-github.io/wdd130-ww-course/images/wwr/wwr-wireframe-home.png" alt="Home Page Wireframe Example Design" width="700">
+        <h3>About Us Page Wireframe</h3>
+        <img src="https://byui-cse.github.io/wdd130-ww-course/images/wwr/wwr-wireframe-aboutus-update.png" alt="About Us Page Wireframe Design" width="700">
+    </body>
+
+</main>
 
 <footer>
     <p>©2024 • White Water Rafting Site Plan • Charisse Hearns-Lemon • WDD 130</p>
