--- a/index.html
+++ b/index.html
@@ -18,25 +18,25 @@
                 <a href="https://www.facebook.com/charissehl">Facebook Profile</a>
             </nav>
         </header>
-        <main>
-            <h1>Charisse Hearns-Lemon | WDD 130</h1>
-            <img src="images/profile.jpg" alt="Profile photo of Charisse Hearns-Lemon" width="200">
-            <p>Kia ora (Hi) from Auckland, New Zealand! I'm a mother of two lovely children aged 11 and 8 years, a sister to five siblings, and have two wonderful parents.</p>
-            <p>My hobbies include doodling, geeking, gardening, camping, reading, and spending time with my loved ones.</p>
-            <p>I'm excited to be studying online at BYU Idaho and am enjoying the courses I'm taking.</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque qui quas laboriosam dolor alias nulla, eveniet modi error aperiam! Corrupti quo aperiam quis. Inventore, hic unde! Accusamus vero optio nam neque libero non?</p>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Explicabo corrupti non et voluptatem obcaecati commodi alias illo accusantium.</p>
-            <ul class="box">
-                <li><a href="https://www.churchofjesuschrist.org/temples/details/auckland-new-zealand-temple?lang=eng" target="blank">Auckland, New Zealand Temple</a></li>
-                <li><a href="https://newsroom.churchofjesuschrist.org/article/hamilton-new-zealand-temple" target="blank">Hamilton, New Zealand Temple</a></li>
-                <li><a href="https://churchofjesuschristtemples.org/sydney-australia-temple/" target="blank">Sydney, Australia Temple</a></li>
-            </ul>
-        </main>
-        <aside class="box">
-            <h2>Auckland</h2>
-            <img src="images/auckland.jpg" alt="Auckland's scenic landscape.">
-            <p>"The Māori-language name for Auckland is Tāmaki Makaurau, meaning "Tāmaki desired by many", in reference to the desirability of its natural resources and geography." <i>- wiki</i></p>
-        </aside>
+        <div class="grid">
+            <main>
+                <h1>Charisse Hearns-Lemon | WDD 130</h1>
+                <img src="images/profile.jpg" alt="Profile photo of Charisse Hearns-Lemon" width="200">
+                <p>Kia ora (Hi) from Auckland, New Zealand! I'm a mother of two lovely children aged 11 and 8 years, a sister to five siblings, and have two wonderful parents.</p>
+                <p>My hobbies include doodling, geeking, gardening, camping, reading, and spending time with my loved ones.</p>
+                <p>I'm excited to be studying online at BYU Idaho and am enjoying the courses I'm taking.</p>
+                <ul class="box">
+                    <li><a href="https://www.churchofjesuschrist.org/temples/details/auckland-new-zealand-temple?lang=eng" target="blank">Auckland, New Zealand Temple</a></li>
+                    <li><a href="https://newsroom.churchofjesuschrist.org/article/hamilton-new-zealand-temple" target="blank">Hamilton, New Zealand Temple</a></li>
+                    <li><a href="https://churchofjesuschristtemples.org/sydney-australia-temple/" target="blank">Sydney, Australia Temple</a></li>
+                </ul>
+            </main>
+            <aside class="box">
+                <h2>Auckland</h2>
+                <img src="images/auckland.jpg" alt="Auckland's scenic landscape.">
+                <p>"The Māori-language name for Auckland is Tāmaki Makaurau, meaning "Tāmaki desired by many", in reference to the desirability of its natural resources and geography." <i>- wiki</i></p>
+            </aside>
+        </div>
         <footer>
             <p>&#169;2024 &#9830; Charisse Hearns-Lemon &#9830; Auckland, New Zealand
             </p>
