--- a/wwr/about.html
+++ b/wwr/about.html
@@ -15,8 +15,8 @@
     <body>
 
         <header class="header">
-            <img src="images/logo.png" alt="Rapids Site Logo">
-            <nav>
+            <img class="logo" src="images/logo.png" alt="Rapids Site Logo">
+            <nav class="navlinks">
                 <a href="index.html">Home</a>
                 <a href="about.html">About Us</a>
                 <a href="trips.html">Trips</a>
@@ -34,23 +34,44 @@
                 </article>
                 <section class="hero-section">
                     <h2>History</h2>
-                    <p>Brief history of the company Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vero officiis recusandae natus illum.</p>
+                    <div class="history-grid">
+                        <p class="history-p1">Brief history of the company Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vero officiis recusandae natus illum.</p>
+                        <img src="images/history.jpg" alt="history photo">
+                        <p class="history-p2">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quos explicabo quidem perspiciatis? Sed consequatur natus et beatae dignissimos optio tempora? Illum, pariatur?</p>
+                    </div>
                 </section>
-                <section class ="hero-section">
-                    <h2>Adventure Awaits You!</h2>
-                    <img src="images/about-img1.jpg" alt="Image 1">
-                    <img src="images/about-img2.jpg" alt="Image 2">
-                    <img src="images/about-img3.jpg" alt="Image 3">
-                    <img src="images/about-img4.jpg" alt="Image 4">
-                    <img src="images/about-img5.jpg" alt="Image 5">
+                <section class="hero-section">
+                    <h2 class=" gallery-h2">Adventure Awaits You!</h2>
+                    <div class="about-gallery">
+                        <figure>
+                            <img src="images/about-img1.jpg" alt="Image 1">
+                            <figcaption>White Foam Adventure</figcaption>
+                        </figure>
+                        <figure>
+                            <img src="images/about-img2.jpg" alt="Image 2">
+                            <figcaption>Rocky Cove Adventure</figcaption>
+                        </figure>
+                        <figure>
+                            <img src="images/about-img3.jpg" alt="Image 3">
+                            <figcaption>Kea River</figcaption>
+                        </figure>
+                        <figure>
+                            <img src="images/about-img4.jpg" alt="Image 4">
+                            <figcaption>Evergreen Drift</figcaption>
+                        </figure>
+                        <figure>
+                        <img src="images/about-img5.jpg" alt="Image 5">
+                        <figcaption>Xtreme Rapids</figcaption>
+                        </figure>
+                    </div>
                 </section>
             </div>
 
         </main>
 
-        <footer>
+        <footer class="footer">
             <p>@2024 ◈ Rapids White Water Rafting ◈ Charisse Hearns-Lemon</p>   
-            <nav>
+            <nav class="footer-links">
                 <a href="https://www.facebook.com/">
                     <img src="images/facebook-icon.png" alt="Facebook logo">
                 </a>
