--- a/wwr/about.html
+++ b/wwr/about.html
@@ -70,7 +70,7 @@
         </main>
 
         <footer class="footer">
-            <p>@2024 ◈ Rapids White Water Rafting ◈ Charisse Hearns-Lemon</p>   
+            <p>@2024 ◈ Rapids White Water Rafting ◈ Charisse HL</p>   
             <nav class="footer-links">
                 <a href="https://www.facebook.com/">
                     <img src="images/facebook-icon.png" alt="Facebook logo">
