--- a/wwr/about.html
+++ b/wwr/about.html
@@ -14,13 +14,15 @@
 
     <body>
 
-        <header class="header">
-            <img class="logo" src="images/logo.png" alt="Rapids Site Logo">
-            <nav class="navlinks">
-                <a href="index.html">Home</a>
-                <a href="about.html">About Us</a>
-                <a href="trips.html">Trips</a>
-                <a href="contact.html">Contact Us</a>
+        <header class="head">
+            <img src="images/logo.png" alt="Rapids Site Logo">
+            <nav>
+                <ul class="navigation">
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about.html">About Us</a></li>
+                    <li><a href="trips.html">Trips</a></li>
+                    <li><a href="contact.html">Contact Us</a></li>
+                </ul>
             </nav>
         </header>
 
@@ -40,8 +42,8 @@
                         <p class="history-p2">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quos explicabo quidem perspiciatis? Sed consequatur natus et beatae dignissimos optio tempora? Illum, pariatur?</p>
                     </div>
                 </section>
-                <section class="hero-section">
-                    <h2 class=" gallery-h2">Adventure Awaits You!</h2>
+                <section class="hero-section gallery">
+                    <h2>Adventure Awaits You!</h2>
                     <div class="about-gallery">
                         <figure>
                             <img src="images/about-img1.jpg" alt="Image 1">
