--- a/wwr/about.html
+++ b/wwr/about.html
@@ -42,7 +42,7 @@
                         <p class="history-p2">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quos explicabo quidem perspiciatis? Sed consequatur natus et beatae dignissimos optio tempora? Illum, pariatur?</p>
                     </div>
                 </section>
-                <section class="hero-section gallery">
+                <section class="hero-section">
                     <h2>Adventure Awaits You!</h2>
                     <div class="about-gallery">
                         <figure>
