--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -80,8 +80,8 @@
                                             <option value="equipment">Equipment Hire</option>
                                             <option value="feedback">Feedback</option>
                                             <option value="other">Other</option>
-                                    </select><br>
-                                    <div">
+                                        </select><br>
+                                    <div>
                                         <br>
                                         <label for="message">MESSAGE<span class="required">*</span>
                                         </label><br>
@@ -96,7 +96,7 @@
                                 <div>
                                     <p><span class="required"> * </span> Required fields</p><br>
                                 </div>
-                                <button type="send">Send</button>
+                                <button type="submit">Send</button>
                             </form>
                         </div>
                         <div class="map">
@@ -104,7 +104,7 @@
                                 <img src="images/team0.jpg" alt="Group photo of all staff members after a rafting adventure.">
                             </div>
                             <h2>Where to find us</h2>
-                            <iframe src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d7226.001007381323!2d175.76226746068457!3d-38.390994239557!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2snz!4v1712468402271!5m2!1sen!2snz" width="660px" height="400px" style="border:0" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                            <iframe src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d7226.001007381323!2d175.76226746068457!3d-38.390994239557!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2snz!4v1712468402271!5m2!1sen!2snz" width="660" height="400" style="border:0" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                             <div class="address">
                                 <h4>Physical address</h4>
                                 <h5>1234/56 Waipapa Road</h5>
@@ -146,7 +146,8 @@
         </main>
 
         <footer class="footer">
-            <p>@2024 ◈ Rapids White Water Rafting ◈ Charisse HL</p>   
+            <p>@2024 ◈ Rapids White Water Rafting ◈ Charisse HL</p> 
+            <a href="images/resources/contact-wireframe.png">Contact page wireframe</a>
             <nav class="footer-links">
                 <a href="https://www.facebook.com/">
                     <img src="images/facebook-icon.png" alt="Facebook logo">
