wwr completed site tested

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -30,10 +30,10 @@
             <div class="herodiv">
                 <img src="images/hero-img.jpg" alt="Background image">
                 <h1>Rapids White Water Rafting</h1>
-                <article class="hero-article">
+                <div class="hero-article">
                     <img src="images/happy-client.png" alt="A happy boatload of customers.">
                     <p>Company purpose, mission, creed, motto etc. Lorem ipsum dolor sit amet consectetur adipisicing elit!</p>
-                </article>
+                </div>
                 <section class="hero-section">
                     <h2>History</h2>
                     <div class="history-grid">
