--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -41,80 +41,83 @@
                         <h5>+64-987-6543</h5>
                     </div>
                 </article>
-                <section class="contact-info">
-                    <article>
-                        <div>
-                            <form>
-                                <h4>Send us a message</h4>
-                                <fieldset>
-                                    <legend>Contact Information</legend>
-                                    <div>
-                                        <label>NAME<span class="required">*</span><br>
-                                            <input type="text" name="firstname" placeholder="First">
-                                        </label><br>
-                                        <label> 
-                                            <input type="text" name="lastname" placeholder="Last">
-                                        </label>
-                                    </div>
-                                    <div>
-                                        <br>
-                                        <label>EMAIL<span class="required">*</span><br>
-                                            <input type="email" name="useremail" placeholder="Email">
-                                        </label><br>
-                                    </div>
-                                    <div>
-                                        <br>
-                                        <label>PHONE <br>
-                                            <input type="number" name="userphone" placeholder="Phone">
-                                        </label>
-                                    </div>
-                                </fieldset>
-                                <fieldset>
-                                    <legend>Enquiry Details</legend>
-                                    <div>
-                                        <label for="enquiry-type">ENQUIRY TYPE<span class="required">*</span><br>
-                                        </label>
-                                        <select id="enquiry-type" name="enquiry-type">
-                                            <option disabled selected value>-- select an option -- </option>
-                                            <option value="booking">Booking</option>
-                                            <option value="equipment">Equipment Hire</option>
-                                            <option value="feedback">Feedback</option>
-                                            <option value="other">Other</option>
-                                        </select><br>
-                                    <div>
-                                        <br>
-                                        <label for="message">MESSAGE<span class="required">*</span>
-                                        </label><br>
-                                        <textarea id="message" name="message" rows="7" placeholder="Enter your message here."></textarea><br>
-                                    </div>
-                                    <div>
-                                        <br>
-                                        <label for="newsletter">Subscribe to our monthly newsletter </label>
-                                        <input type="checkbox" id="newsletter" name="newsletter">
-                                    </div>
-                                </fieldset>
-                                <div>
-                                    <p><span class="required"> * </span> Required fields</p><br>
-                                </div>
-                                <button type="submit">Send</button>
-                            </form>
-                        </div>
-                        <div class="map">
-                            <div>
-                                <img src="images/team0.jpg" alt="Group photo of all staff members after a rafting adventure.">
-                            </div>
-                            <h2>Where to find us</h2>
-                            <iframe src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d7226.001007381323!2d175.76226746068457!3d-38.390994239557!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2snz!4v1712468402271!5m2!1sen!2snz" width="660" height="400" style="border:0" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-                            <div class="address">
-                                <h4>Physical address</h4>
-                                <h5>1234/56 Waipapa Road</h5>
-                                <h5>Mangakino 3492</h5>
-                            </div>
+                <div class="contact-info">
 
+
+                    <form>
+                        <h4>Send us a message</h4>
+                        <fieldset>
+                            <legend>Contact Information</legend>
+                            <div>
+                                <label>NAME<span class="required">*</span><br>
+                                    <input type="text" name="firstname" placeholder="First">
+                                </label><br>
+                                <label> 
+                                    <input type="text" name="lastname" placeholder="Last">
+                                </label>
+                            </div>
+                            <div>
+                                <br>
+                                <label>EMAIL<span class="required">*</span><br>
+                                    <input type="email" name="useremail" placeholder="Email">
+                                </label><br>
+                            </div>
+                            <div>
+                                <br>
+                                <label>PHONE <br>
+                                    <input type="number" name="userphone" placeholder="Phone">
+                                </label>
+                            </div>
+                        </fieldset>
+                        <fieldset>
+                            <legend>Enquiry Details</legend>
+                            <div>
+                                <label for="enquiry-type">ENQUIRY TYPE<span class="required">*</span><br>
+                                </label>
+                                <select id="enquiry-type" name="enquiry-type">
+                                    <option disabled selected value>-- select an option -- </option>
+                                    <option value="booking">Booking</option>
+                                    <option value="equipment">Equipment Hire</option>
+                                    <option value="feedback">Feedback</option>
+                                    <option value="other">Other</option>
+                                </select><br>
+                            </div>
+                            <div>
+                                <br>
+                                <label for="message">MESSAGE<span class="required">*</span>
+                                </label><br>
+                                <textarea id="message" name="message" rows="7" placeholder="Enter your message here."></textarea><br>
+                            </div>
+                            <div>
+                                <br>
+                                <label for="newsletter">Subscribe to our monthly newsletter                                     
+                                </label>
+                                <input type="checkbox" id="newsletter" name="newsletter">
+                            </div>
+                        </fieldset>
+                        <div>
+                            <p><span class="required"> * </span> Required fields</p><br>
                         </div>
-                    </article>
+                        <button type="submit">Send</button>
+                    </form>
+
+                    <div class="map">
+                        <div>
+                            <img src="images/team0.jpg" alt="Group photo of all staff members after a rafting adventure.">
+                        </div>
+                        <h2>Where to find us</h2>
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d7226.001007381323!2d175.76226746068457!3d-38.390994239557!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2snz!4v1712468402271!5m2!1sen!2snz" width="660" height="400" style="border:0" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
+                        </iframe>
+                        <div class="address">
+                            <h4>Physical address</h4>
+                            <h5>1234/56 Waipapa Road</h5>
+                            <h5>Mangakino 3492</h5>
+                        </div>
+
+                    </div>
+
                     
-                </section>
+                </div>
                 <section class="team-section">
                     <h2>Meet the team</h2>
                     <div class="team-gallery">
